SC-157: nav after content on mobile plus general color corrections

--- a/source/_patterns/00-protons/typography/_text.scss
+++ b/source/_patterns/00-protons/typography/_text.scss
@@ -2,11 +2,17 @@ $_config_schemes: (
   base: (
     lead-color: "ink",
     brow-color: base-dark,
+    link-color: "cyan-50",
+    link-hover-color: "cyan-60",
+    link-visited-color: "cyan-50",
   ),
   local: (
     lead-color: "base-darker",
   ),
   pro: (
+    link-color: "blue-50",
+    link-hover-color: "blue-60",
+    link-visited-color: "blue-50",
     text1-line-height: 2,
     text2-line-height: 2,
     text3-line-height: 3,
@@ -23,6 +29,18 @@ $_config_schemes: (
 );
 
 $_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);
+
+a {
+  @include u-color(map-get($_config, link-color));
+
+  &:visited {
+    @include u-color(map-get($_config, link-visited-color));
+  }
+
+  &:hover {
+    @include u-color(map-get($_config, link-hover-color));
+  }
+}
 
 .jcc-text-1 {
   @include typeset(body, map-get($_config, text1-mobile-size), map-get($_config, text1-line-height));
